[package]
name = "fizz-strat"
version = "0.1.0"
authors = ["leo60228 <leo@60228.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
attohttpc = { version = "0.17.0", features = ["tls-rustls", "json", "compress"], default-features = false }
chrono = { version = "0.4.19", features = ["serde"] }
dotenv = "0.15.0"
ego-tree = "0.6.2"
log = "0.4.14"
rand = "0.8.3"
scraper = "0.12.0"
selectors = "0.22.0"
serde = { version = "1.0.125", features = ["derive"] }
serde_with = { version = "1.8.0", features = ["chrono"] }
